test/domains/marybeth/test_compare_range.good
test_compare_range.chpl:14: In function 'initMatrix':
test_compare_range.chpl:20: error: iterator or promoted expression iterator used in if or while condition
